--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Animation</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_normal_transition">NormalTransition</string>
+    <string name="normal_transition">normal transition</string>
+    <string name="shared_transition">shared transition</string>
+    <string name="title_activity_shared_element">SharedElement</string>
 </resources>
